Progress on head pose.

--- a/start.html
+++ b/start.html
@@ -9,6 +9,9 @@
     App:<br>
     <input type="text" name="app" value="yes">
     <br>
+    Headpose:<br>
+    <input type="text" name="headpose" value="yes">
+    <br>
     Rec:<br>
     <input type="text" name="rec" value="rec12">
     <br>
