Adds reference point and angle calculation.

--- a/start.html
+++ b/start.html
@@ -12,6 +12,9 @@
     Headpose:<br>
     <input type="text" name="headpose" value="yes">
     <br>
+    Reference point:<br>
+    <input type="text" name="ref" value="yes">
+    <br>
     Rec:<br>
     <input type="text" name="rec" value="rec12">
     <br>
