Progress on plane.

--- a/vs.html
+++ b/vs.html
@@ -103,6 +103,7 @@
     <script type="text/javascript" src="js/lib/dat.gui.min.js"></script>
     <script type="text/javascript" src="js/lib/OrbitControls.js"></script>
     <script type="text/javascript" src="js/lib/Detector.js"></script>
+    <script type="text/javascript" src="js/lib/math.min.js"></script>
 
     <!-- wavesurfer.js -->
     <script src="../../libraries/wavesurfer/dist/wavesurfer.min.js"></script>
