--- a/realtime/vs.html
+++ b/realtime/vs.html
@@ -44,9 +44,9 @@
     console.log("Start: " + startvis);
     </script>
 
-    <script type="text/javascript" src="../../libraries/threejs/build/three.min.js"></script>
-    <script type="text/javascript" src="../../libraries/statsjs/build/stats.min.js"></script>
-    <script type="text/javascript" src="../../libraries/papaparse/papaparse.min.js"></script>
+    <script type="text/javascript" src="../../../libraries/threejs/build/three.min.js"></script>
+    <script type="text/javascript" src="../../../libraries/statsjs/build/stats.min.js"></script>
+    <script type="text/javascript" src="../../../libraries/papaparse/papaparse.min.js"></script>
     <script type="text/javascript" src="js/lib/dat.gui.min.js"></script>
     <script type="text/javascript" src="js/lib/OrbitControls.js"></script>
     <script type="text/javascript" src="js/lib/Detector.js"></script>
