--- a/realtime/start.html
+++ b/realtime/start.html
@@ -4,10 +4,10 @@
     <center>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-    Real Time Visualisation
+    Real Time Mocap-Gaze Visualisation
     <form action="vs.html">
     Start<br>
-    <input type="text" name="start" value="0">
+    <input type="text" name="IP" value="130.237.67.209">
     <br><br>
     <input type="submit" value="Start">
     </form>
