--- a/start.html
+++ b/start.html
@@ -13,7 +13,7 @@
     <input type="text" name="headpose" value="yes">
     <br>
     Reference point:<br>
-    <input type="text" name="ref" value="yes">
+    <input type="text" name="ref" value="0">
     <br>
     Rec:<br>
     <input type="text" name="rec" value="rec12">
